# within

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  default_13206424743632513998_0_8711.profraw  default_13206424743632513998_0_95323.profraw  default_13206424743632513998_0_97184.profraw  default_13206424743632513998_0_98915.profraw  default_9413641345628342930_0_18308.profraw  pixi.toml  pyproject.toml
.github/workflows/: cargo-publish.yml  ci.yml  publish.yml
.serena/: project.yml
benchmarks/: __init__.py  __main__.py  _akm_helpers.py  _framework.py  _problems.py  _registry.py  _solver_presets.py  _solvers.py  _table.py  _types.py
benchmarks/suites/: __init__.py  ac_comparison.py  akm_panel.py  fixest_comparison.py  graph_backend.py  high_fe.py  iteration_reduction.py  laplacian_2fe.py  many_components.py  observation_store.py  one_level_baseline.py  preconditioners.py  scaling.py  subdomain_regimes.py  verify.py
crates/schwarz-precond/: Cargo.toml  README.md
crates/schwarz-precond/examples/: additive_schwarz.rs  custom_local_solver.rs  lsmr_local_reorth.rs
crates/schwarz-precond/src/: domain.rs  error.rs  lib.rs  local_solve.rs  multiplicative_schwarz.rs  operator.rs  residual_update.rs  schwarz.rs  solve.rs  sparse_matrix.rs
crates/schwarz-precond/src/schwarz/: additive.rs  multiplicative.rs
crates/schwarz-precond/src/schwarz/additive/: buffers.rs  executor.rs  planning.rs  preconditioner.rs  serde.rs
crates/schwarz-precond/src/solve/: cg.rs  deflated_cg.rs  gmres.rs  lsmr.rs  tridiagonal_eigen.rs  util.rs
crates/schwarz-precond/src/solve/lsmr/: bidiag.rs  recurrence.rs  tests.rs
crates/schwarz-precond/tests/: cg_edge_cases.rs  faer_integration.rs  gmres.rs  multiplicative_schwarz.rs  schwarz.rs
crates/schwarz-precond/tests/common/: mod.rs
crates/within/: Cargo.toml  LICENSE  README.md
crates/within-py/: Cargo.toml
crates/within-py/src/: api.rs  lib.rs
crates/within-r/: Cargo.toml
crates/within-r/src/: lib.rs
crates/within/benches/: fixest.rs  fixest_mini.rs  fixest_smoke.rs  store_backend.rs
crates/within/examples/: lsmr_profile.rs  lsmr_vs_cg.rs  memory_profile.rs  preconditioned_solve.rs  solve_demo.rs
crates/within/src/: config.rs  domain.rs  error.rs  lib.rs  observation.rs  operator.rs  orchestrate.rs  preconditioner.rs  solver.rs
crates/within/src/domain/: factor_pairs.rs  schema.rs
crates/within/src/domain/schema/: factor_major.rs  ops.rs  tests.rs
crates/within/src/observation/: compressed.rs  factor_major.rs  row_major.rs
crates/within/src/operator/: csr_block.rs  design.rs  dof_obs_index.rs  gramian.rs  local_solver.rs  preconditioner.rs  residual_update.rs  schur_complement.rs  schwarz.rs  tests.rs
crates/within/src/operator/gramian/: accumulator.rs  cross_tab.rs  csr_assembly.rs  explicit.rs  implicit.rs  tests.rs
crates/within/src/operator/local_solver/: approx_chol_solver.rs  block_elim_solver.rs  fe_local_solver.rs  strategy.rs  transforms.rs
crates/within/src/operator/schur_complement/: elimination.rs  schur_laplacian.rs
crates/within/src/orchestrate/: api.rs  batch.rs  common.rs  least_squares.rs  normal_equations.rs  result.rs
crates/within/src/orchestrate/least_squares/: execute.rs
crates/within/tests/: array_store.rs  domain.rs  edge_cases.rs  error_paths.rs  gramian.rs  iterative_refinement.rs  local_solver_properties.rs  orchestrate_backends.rs  orchestrate_batch.rs  orchestrate_high_level.rs  orchestrate_normal_eq.rs  orchestrate_preconditioners.rs  orchestrate_solve.rs  orchestrate_weighted.rs  preconditioner_coverage.rs  properties.rs  property_gaps.rs  solver.rs
crates/within/tests/common/: orchestrate_helpers.rs
docs/: 1_fixed_effects_and_block_methods.md  2_solver_architecture.md  3_local_solvers.md  4_implementation.md
python/within/: README.md  __init__.py  _within.pyi  utils.py
r/: DESCRIPTION  NAMESPACE
r/R/: extendr-wrappers.R  within.R
r/man/: solve.Rd  solve_batch.Rd  within_solve.Rd  within_solve_batch.Rd
r/src/: Makevars  Makevars.win  entrypoint.c  rust
scripts/: bench_lsmr_local_size.py  coverage-with-python.sh  krylov_method_comparison.py  krylov_stress_matrix.py
tests/: conftest.py  test_edge_cases.py  test_error_handling.py  test_preconditioner.py  test_properties.py  test_solve.py
withinr/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  test_bindings.R
withinr/R/: extendr-wrappers.R  solve.R
withinr/benchmarks/: benchmark_fixest_demean.R
withinr/man/: solve.Rd  solve_batch.Rd
withinr/src/: Makevars  Makevars.win  entrypoint.c
withinr/src/rust/: Cargo.toml
withinr/src/rust/src/: lib.rs
withinr/tests/: testthat.R
withinr/tests/testthat/: test-solve.R
