[workspace]
members = [
    "crates/schwarz-precond",
    "crates/within",
    "crates/within-py",
    "crates/within-r",
]
resolver = "2"

[workspace.dependencies]
approx-chol = { git = "https://github.com/aai-institute/approx-chol.git", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
