[workspace]
members = [
    "crates/schwarz-precond",
    "crates/within",
    "crates/within-py",
    "crates/within-r",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

# Release-equivalent build that keeps line-level debug info so samply/perf/
# dtrace can resolve stack frames. Build with `cargo build --profile profiling`.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
