[package]
name = "schwarz-precond"
version = "0.1.0"
edition = "2021"
description = "Schwarz domain decomposition preconditioner"
license = "MIT"
readme = "README.md"
repository = "https://github.com/py-econometrics/within"
keywords = ["schwarz", "preconditioner", "domain-decomposition", "sparse", "iterative-solver"]
categories = ["mathematics", "science", "algorithms"]

[features]
serde = ["dep:serde"]

[dependencies]
rayon = "1.10"
faer = "0.24.0"
serde = { version = "1", features = ["derive"], optional = true }
thread_local = "1.1"
