[package]
name = "within"
version = "0.1.0"
edition = "2021"
description = "Fixed-effects normal equation solver with Schwarz preconditioning"
license = "MIT"
readme = "README.md"
repository = "https://github.com/py-econometrics/within"
keywords = ["fixed-effects", "least-squares", "preconditioner", "schwarz", "econometrics"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
schwarz-precond = { path = "../schwarz-precond", features = ["serde"] }
approx-chol = { workspace = true }
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"
ndarray = "0.16"
portable-atomic = { version = "1", features = ["float"] }
rayon = "1.10"
faer = "0.22"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.9", features = ["small_rng"] }

[[bench]]
name = "fixest"
harness = false

[[bench]]
name = "store_backend"
harness = false
